# mia

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md
.github/workflows/: ci.yml  deploy-site.yml  release.yml  retry-release.yml
app/: biome.json  index.html  package.json  tsconfig.json  vite.config.ts
app/scripts/: fetch-binaries.mjs
app/src/: App.svelte  main.ts  styles.css
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app/src-tauri/binaries/llama/: .gitkeep
app/src-tauri/capabilities/: default.json  hud.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: ai_commands.rs  app_styles.rs  audio.rs  cleanup.rs  dictation.rs  dictionary.rs  history.rs  hotkey.rs  hud.rs  inject.rs  lib.rs  main.rs  persist.rs  power_resume.rs  settings.rs  snippets.rs  sounds.rs  stats.rs  stt.rs  text_match.rs  tray.rs  vad.rs  win32.rs  window_state.rs
app/src/lib/: ai.ts  app.ts  audio.ts  dictation.ts  dictionary.ts  history.ts  hotkey.ts  i18n.ts  inject.ts  ptt.ts  settings.ts  snippets.ts  stats.ts  stt.ts  update.ts
app/src/lib/components/: AiSection.svelte  DictionarySection.svelte  Hub.svelte  HudWindow.svelte  MicHud.svelte  Onboarding.svelte  PerAppSection.svelte  SnippetsSection.svelte  WindowTitleBar.svelte
app/src/lib/components/ui/: Button.svelte  Card.svelte  ConfirmDialog.svelte  ErrorBanner.svelte  Field.svelte  LevelMeter.svelte  NavItem.svelte  PageHeader.svelte  Pill.svelte  Select.svelte  StatTile.svelte  Toggle.svelte  inputClass.ts
app/src/lib/components/views/: DictationView.svelte  HistoryView.svelte  ModelsView.svelte  OverviewView.svelte
docs/: FEATURE-MAP.md  REUSE-FROM-TOOLZY.md  ROADMAP.md
docs/archive/: REUSE-FROM-TOOLZY.md
docs/notes/: window-visibility.md
docs/specs/: _template.md  ai-commands.md  architecture.md  audio-capture.md  custom-dictionary.md  design-system.md  dictation-history.md  dictation.md  hotkeys.md  onboarding.md  per-app-context.md  settings.md  snippets.md  speech-to-text.md  text-cleanup.md  text-injection.md  tray-and-hud.md
site/: README.md  index.html  package.json  vite.config.ts
site/src/: styles.css
