[package]
name = "mia"
version = "0.1.4"
description = "MIA — local voice-to-text dictation for Windows"
authors = ["Guilherme Passos"]
edition = "2021"
license = "MIT"
repository = "https://github.com/guilhermeeng99/mia"

# The Tauri app is a library (so it can target mobile later) driven by a thin main.rs.
[lib]
name = "mia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
ureq = "3"
enigo = "0.5"
arboard = "3"
unicode-segmentation = "1"
unicode-normalization = "0.1"
cpal = "0.15"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
# Signed in-app auto-update (GitHub Releases + minisign latest.json, ADR-009).
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Focus-aware injection (text-injection.md Rules 6-7) + per-app context (per-app-context.md):
# foreground-window process name + elevation probe. Windows-only (ADR-011); win32.rs stubs
# out elsewhere. windows-sys (flat C ABI) aligned to the copy already in the lock.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Security",
] }

# Release profile: small, optimized installer binary.
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
